[tool.poetry]
name = "selic-forecast"
version = "0.1.0"
description = ""
authors = ["Lucas Okamura <lucasokamura@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.3"
numpy = "^1.23.1"
requests = "^2.28.1"
bs4 = "^0.0.1"
lxml = "^4.9.1"
html5lib = "^1.1"
selenium = "^4.3.0"
webdriver-manager = "^3.8.3"
matplotlib = "^3.5.2"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
